--- a/kin-backup-and-restore/kin-backup-and-restore-lib/src/main/res/layout/backup_and_restore_fragment_backup_info.xml
+++ b/kin-backup-and-restore/kin-backup-and-restore-lib/src/main/res/layout/backup_and_restore_fragment_backup_info.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -56,4 +56,4 @@
         app:layout_constraintStart_toStartOf="parent"
         android:background="@drawable/backup_and_restore_btn_purple_blue"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</android.support.constraint.ConstraintLayout>
