--- a/kin-backup-and-restore/kin-backup-and-restore-lib/src/main/res/layout/backup_and_restore_fragment_password_restore.xml
+++ b/kin-backup-and-restore/kin-backup-and-restore-lib/src/main/res/layout/backup_and_restore_fragment_password_restore.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent"
-                                                   android:paddingRight="@dimen/backup_and_restore_screen_left_right_padding"
-                                                   android:paddingLeft="@dimen/backup_and_restore_screen_left_right_padding"
-                                                   android:background="@android:color/white">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingRight="@dimen/backup_and_restore_screen_left_right_padding"
+    android:paddingLeft="@dimen/backup_and_restore_screen_left_right_padding"
+    android:background="@android:color/white">
 
     <ImageView
         android:id="@+id/kinrecovery_password_qr_icon"
@@ -63,4 +63,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</android.support.constraint.ConstraintLayout>
